--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,30 +5,31 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", 		"overpass", "electric"]
+"stages" = ["coffee", "jules", "fondala",	"overpass", "electric"]
 [days.schedule]
-"18:00" = [ "tbd", 		"", 	"" ]
-"18:20" = [ "", 		"", 	"" ]
-"18:40" = [ "", 		"", 	"" ]
-"19:00" = [ "", 		"", 	"" ]
-"19:20" = [ "", 		"", 	"" ]
-"19:40" = [ "", 		"", 	"" ]
-"20:00" = [ "", 		"", 	"" ]
-"20:20" = [ "", 		"", 	"" ]
-"20:40" = [ "", 		"", 	"" ]
-"21:00" = [ "", 		"", 	"" ]
-"21:20" = [ "", 		"", 	"" ]
-"21:40" = [ "", 		"", 	"" ]
-"22:00" = [ "", 		"", 	"" ]
-"22:20" = [ "", 		"", 	"" ]
-"22:40" = [ "", 		"", 	"" ]
-"23:00" = [ "", 		"", 	"" ]
-"23:20" = [ "", 		"", 	"" ]
-"23:40" = [ "", 		"", 	"" ]
+"18:00" = [ "", 		"", 	"", 		"", 	"" ]
+"18:20" = [ "", 		"", 	"", 		"", 	"" ]
+"18:40" = [ "", 		"", 	"", 		"", 	"" ]
+"19:00" = [ "", 		"", 	"", 		"", 	"" ]
+"19:20" = [ "", 		"", 	"", 		"", 	"" ]
+"19:40" = [ "", 		"", 	"", 		"", 	"" ]
+"20:00" = [ "", 		"", 	"", 		"", 	"" ]
+"20:20" = [ "", 		"", 	"", 		"", 	"" ]
+"20:40" = [ "", 		"", 	"", 		"", 	"" ]
+"21:00" = [ "", 		"", 	"", 		"", 	"" ]
+"21:20" = [ "", 		"", 	"", 		"", 	"" ]
+"21:40" = [ "", 		"", 	"", 		"", 	"" ]
+"22:00" = [ "", 		"", 	"", 		"", 	"" ]
+"22:20" = [ "", 		"", 	"", 		"", 	"" ]
+"22:40" = [ "", 		"", 	"", 		"", 	"" ]
+"23:00" = [ "", 		"", 	"", 		"", 	"" ]
+"23:20" = [ "", 		"", 	"", 		"", 	"" ]
+"23:40" = [ "", 		"", 	"", 		"", 	"" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
 "potty" = [845.0,953.0]
+"potty2" = [200.0, 200.0]
 
 [[days]]
 "date"	= "2024-06-01"
