--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
 			"extensions": [
 				"bradlc.vscode-tailwindcss",
 				"astro-build.astro-vscode",
-				"svelte.svelte-vscode"
+				"svelte.svelte-vscode",
+				"tamasfe.even-better-toml"
 			]
 		}
 	},
