--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -7,18 +7,18 @@
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
 "stages" = ["coffee", "overpass", "electric",	"stables", "jules"]
 [days.schedule]
-"18:00" = [ "", 		"", 	"", 		"", 	"" ]
-"18:20" = [ "", 		"", 	"", 		"", 	"" ]
-"18:40" = [ "", 		"", 	"", 		"", 	"" ]
-"19:00" = [ "", 		"", 	"", 		"", 	"" ]
-"19:20" = [ "", 		"", 	"", 		"", 	"" ]
-"19:40" = [ "", 		"", 	"", 		"", 	"" ]
-"20:00" = [ "", 		"", 	"", 		"", 	"" ]
-"20:20" = [ "", 		"", 	"", 		"", 	"" ]
-"20:40" = [ "", 		"", 	"", 		"", 	"" ]
-"21:00" = [ "", 		"", 	"", 		"", 	"" ]
-"21:20" = [ "", 		"", 	"", 		"", 	"" ]
-"21:40" = [ "", 		"", 	"", 		"", 	"" ]
+"18:00" = [ "southendpep", 	"cimarrona", 	"", 		"", 	"" ]
+"18:20" = [ "redalert", 		"cimarrona", 	"8bit", 		"", 	"" ]
+"18:40" = [ "reigncity", 		"flyby", 			"neon", 		"", 	"" ]
+"19:00" = [ "soundwave", 		"neighbors", 	"artesian", 		"", 	"" ]
+"19:20" = [ "soundwave", 		"vamola", 		"artesian", 		"", 	"" ]
+"19:40" = [ "bluethunder", 	"tmb", 				"ffc", 		"", 	"" ]
+"20:00" = [ "cimarrona", 		"neon", 			"goodtrouble", 		"", 	"" ]
+"20:20" = [ "flyby", 				"neon", 			"jambalaya", 		"", 	"" ]
+"20:40" = [ "flyby", 				"tacomarama", "", 		"", 	"" ]
+"21:00" = [ "youngfellaz", 	"agab", 			"", 		"", 	"" ]
+"21:20" = [ "goodtrouble", 	"chaotic", 		"", 		"", 	"" ]
+"21:40" = [ "goodtrouble", 	"chaotic", 		"", 		"", 	"" ]
 "22:00" = [ "", 		"", 	"", 		"", 	"" ]
 "22:20" = [ "", 		"", 	"", 		"", 	"" ]
 "22:40" = [ "", 		"", 	"", 		"", 	"" ]
