fix band schedule values

--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -12,7 +12,7 @@
 "18:40" = [ "reigncity", 		"flyby", 			"neon", 		"", 	"" ]
 "19:00" = [ "soundwave", 		"neighbors", 	"artesian", 		"", 	"" ]
 "19:20" = [ "soundwave", 		"vamola", 		"artesian", 		"", 	"" ]
-"19:40" = [ "bluethunder", 	"tmb", 				"ffc", 		"", 	"" ]
+"19:40" = [ "bluethunder", 	"tmb", 				"filthy", 		"", 	"" ]
 "20:00" = [ "cimarrona", 		"neon", 			"goodtrouble", 		"", 	"" ]
 "20:20" = [ "flyby", 				"neon", 			"jambalaya", 		"", 	"" ]
 "20:40" = [ "flyby", 				"tacomarama", "", 		"", 	"" ]
