--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,26 +5,20 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", "overpass", "electric",	"stables", "jules"]
+"stages" = ["coffee", 			"overpass", 	"electric",		"stables", "jules"]
 [days.schedule]
-"18:00" = [ "southendpep", 	"cimarrona", 	"", 		"", 	"" ]
-"18:20" = [ "redalert", 		"cimarrona", 	"8bit", 		"", 	"" ]
-"18:40" = [ "reigncity", 		"flyby", 			"neon", 		"", 	"" ]
-"19:00" = [ "soundwave", 		"neighbors", 	"artesian", 		"", 	"" ]
-"19:20" = [ "soundwave", 		"vamola", 		"artesian", 		"", 	"" ]
-"19:40" = [ "bluethunder", 	"tmb", 				"filthy", 		"", 	"" ]
-"20:00" = [ "cimarrona", 		"neon", 			"goodtrouble", 		"", 	"" ]
-"20:20" = [ "flyby", 				"neon", 			"jambalaya", 		"", 	"" ]
-"20:40" = [ "flyby", 				"tacomarama", "", 		"", 	"" ]
-"21:00" = [ "youngfellaz", 	"agab", 			"", 		"", 	"" ]
-"21:20" = [ "goodtrouble", 	"chaotic", 		"", 		"", 	"" ]
-"21:40" = [ "goodtrouble", 	"chaotic", 		"", 		"", 	"" ]
-"22:00" = [ "", 		"", 	"", 		"", 	"" ]
-"22:20" = [ "", 		"", 	"", 		"", 	"" ]
-"22:40" = [ "", 		"", 	"", 		"", 	"" ]
-"23:00" = [ "", 		"", 	"", 		"", 	"" ]
-"23:20" = [ "", 		"", 	"", 		"", 	"" ]
-"23:40" = [ "", 		"", 	"", 		"", 	"" ]
+"18:00" = [ "southendpep", 	"cimarrona", 	"", 						"", 						"" ]
+"18:20" = [ "redalert", 		"cimarrona", 	"8bit", 				"", 						"" ]
+"18:40" = [ "reigncity", 		"flyby", 			"neon", 				"better", 			"" ]
+"19:00" = [ "soundwave", 		"neighbors", 	"artesian", 		"better", 			"jambalaya" ]
+"19:20" = [ "soundwave", 		"vamola", 		"artesian", 		"brasscheeks", 	"agab" ]
+"19:40" = [ "bluethunder", 	"tmb", 				"filthy", 			"brasscheeks", 	"youngfellaz" ]
+"20:00" = [ "cimarrona", 		"neon", 			"goodtrouble",	"8bit", 				"youngfellaz" ]
+"20:20" = [ "flyby", 				"neon", 			"jambalaya", 		"8bit", 				"neighbors" ]
+"20:40" = [ "flyby", 				"tacomarama", "", 						"filthy", 			"neighbors" ]
+"21:00" = [ "youngfellaz", 	"agab", 			"", 						"vamola", 			"tmb" ]
+"21:20" = [ "goodtrouble", 	"chaotic", 		"", 						"", 						"tmb" ]
+"21:40" = [ "goodtrouble", 	"chaotic", 		"", 						"", 						"" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
