--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -34,22 +34,22 @@
 "mapUrl"= "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
 "stages"= [ "columbia_hill", 	"edmunds",	"gateway" ]
 [days.schedule]
-"12:00" = [ "", 	"", 					"", 					"" ]
-"12:30" = [ "", 	"", 					"", 					"" ]
-"13:00" = [ "", 	"", 					"", 					"" ]
-"13:30" = [ "", 	"", 					"", 					"" ]
-"14:00" = [ "", 	"", 					"", 					"" ]
-"14:30" = [ "", 	"", 					"", 					"" ]
-"15:00" = [ "", 	"", 					"", 					"" ]
-"15:30" = [ "", 	"", 					"", 					"" ]
-"16:00" = [ "", 	"", 					"", 					"" ]
-"16:30" = [ "", 	"", 					"", 					"" ]
-"17:00" = [ "", 	"", 					"", 					"" ]
-"17:30" = [ "", 	"", 					"", 					"" ]
-"18:00" = [ "", 	"", 					"", 					"" ]
-"18:30" = [ "", 	"", 					"", 					"" ]
-"19:00" = [ "", 	"", 					"", 					"" ]
-"19:30" = [ "", 	"", 					"", 					"" ]
+"12:00" = [ "future", 			"", 						"" ]
+"12:30" = [ "seismic", 			"better", 			"brasscheeks" ]
+"13:00" = [ "neighbors", 		"8bit", 				"artesian" ]
+"13:30" = [ "youngfellaz", 	"agab", 				"tacomarama" ]
+"14:00" = [ "baque", 				"flyby", 				"tmb" ]
+"14:30" = [ "vamola", 			"brassless", 		"goodtrouble" ]
+"15:00" = [ "filthy", 			"sticks", 			"goodtrouble" ]
+"15:30" = [ "machine", 			"cimarrona", 		"baque" ]
+"16:00" = [ "brasscheeks", 	"vamola", 			"chaotic" ]
+"16:30" = [ "tacomarama", 	"artesian", 		"neon" ]
+"17:00" = [ "brassless", 		"phinney", 			"8bit" ]
+"17:30" = [ "flyby", 				"phinney", 			"filthy" ]
+"18:00" = [ "tmb", 					"machine", 			"sticks" ]
+"18:30" = [ "neon", 				"goodtrouble", 	"youngfellaz" ]
+"19:00" = [ "chaotic", 			"neighbors", 		"cimarrona" ]
+"19:30" = [ "allstars", 		"", 						"" ]
 [days.coordinates]
 "info" = [480.0,1270.0]
 "medic" = [480.0,1180.0]
