--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -65,18 +65,18 @@
 "mapUrl" = "https://maps.app.goo.gl/nX3NEqR9PTTX1KnC6"
 "stages"= [ "pratt_hill", 		"pratt_field" ]
 [days.schedule]
-"12:00" = [ "", "" ]
-"12:30" = [ "", "" ]
-"13:00" = [ "", "" ]
-"13:30" = [ "", "" ]
-"14:00" = [ "", "" ]
-"14:30" = [ "", "" ]
-"15:00" = [ "", "" ]
-"15:30" = [ "", "" ]
-"16:00" = [ "", "" ]
-"16:30" = [ "", "" ]
-"17:00" = [ "", "" ]
-"17:30" = [ "", "" ]
+"12:00" = [ "phinney", "gozona" ]
+"12:30" = [ "neighbors", "sticks" ]
+"13:00" = [ "8bit", "artesian" ]
+"13:30" = [ "cimarrona", "goat" ]
+"14:00" = [ "baque", "youngfellaz" ]
+"14:30" = [ "agab", "brassless" ]
+"15:00" = [ "tacomarama", "filthy" ]
+"15:30" = [ "neon", "flyby" ]
+"16:00" = [ "youngfellaz", "tmb" ]
+"16:30" = [ "lynx", "chaotic" ]
+"17:00" = [ "goodtrouble", "cimarrona" ]
+"17:30" = [ "allstars", "" ]
 [days.coordinates]
 "info" = [1200.0,420.0]
 "medic" = [1200.0,510.0]
