update ffc desc

--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -151,7 +151,7 @@ description = ""
 name = "Filthy FemCorps"
 location = "Seattle, WA"
 url = "http://www.filthyfemcorps.com/"
-description = "We are a hot bag full of fierce women who aren’t afraid to be weird, genuine, raw, sweaty, confident, honest, loving and real. We are a feminist organization, in that we are an organized activity in support of women’s interests. We are accepting of all women from all walks of life and invite them to participate in the joy and excitement we create through our performance."
+description = "We’re a community of talented musicians, united by our shared love of music and commitment to celebrating the incredible artistry of women, non-binary, and trans artists. Since our formation in 2016 on the streets of Seattle, we’ve marched to the beat of our down drums, breaking down barriers and spreading joy wherever we go."
 
 [flyby]
 name = "Fly By"
