update band info

--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -1,83 +1,83 @@
 [[days]]
-"date"	= "2024-05-31"
+"date" = "2024-05-31"
 "startTime" = "18:00"
 "endTime" = "22:00"
 "slotDuration" = 20
 "location" = "Georgetown"
-"mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", 			"overpass", 	"electric",		"stables", "jules"]
+"mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA"
+"stages" = ["coffee", "overpass", "electric", "stables", "jules"]
 [days.schedule]
-"18:00" = [ "southendpep", 	"cimarrona", 	"", 						"", 						"" ]
-"18:20" = [ "redalert", 		"cimarrona", 	"8bit", 				"", 						"" ]
-"18:40" = [ "reigncity", 		"flyby", 			"neon", 				"better", 			"" ]
-"19:00" = [ "soundwave", 		"neighbors", 	"artesian", 		"better", 			"jambalaya" ]
-"19:20" = [ "soundwave", 		"vamola", 		"artesian", 		"brasscheeks", 	"agab" ]
-"19:40" = [ "bluethunder", 	"tmb", 				"filthy", 			"brasscheeks", 	"youngfellaz" ]
-"20:00" = [ "cimarrona", 		"neon", 			"goodtrouble",	"8bit", 				"youngfellaz" ]
-"20:20" = [ "flyby", 				"neon", 			"jambalaya", 		"8bit", 				"neighbors" ]
-"20:40" = [ "flyby", 				"tacomarama", "", 						"filthy", 			"neighbors" ]
-"21:00" = [ "youngfellaz", 	"agab", 			"", 						"vamola", 			"tmb" ]
-"21:20" = [ "goodtrouble", 	"chaotic", 		"", 						"", 						"tmb" ]
-"21:40" = [ "goodtrouble", 	"chaotic", 		"", 						"", 						"" ]
+"18:00" = ["southendpep", "cimarrona", "", "", ""]
+"18:20" = ["redalert", "cimarrona", "8bit", "", ""]
+"18:40" = ["reigncity", "flyby", "neon", "better", ""]
+"19:00" = ["soundwave", "neighbors", "artesian", "better", "jambalaya"]
+"19:20" = ["soundwave", "vamola", "artesian", "brasscheeks", "agab"]
+"19:40" = ["bluethunder", "tmb", "filthy", "brasscheeks", "youngfellaz"]
+"20:00" = ["cimarrona", "neon", "goodtrouble", "8bit", "youngfellaz"]
+"20:20" = ["flyby", "neon", "jambalaya", "8bit", "neighbors"]
+"20:40" = ["flyby", "tacomarama", "", "filthy", "neighbors"]
+"21:00" = ["youngfellaz", "agab", "", "vamola", "tmb"]
+"21:20" = ["goodtrouble", "chaotic", "", "", "tmb"]
+"21:40" = ["goodtrouble", "chaotic", "", "", ""]
 [days.coordinates]
-"info" = [845.0,1040.0]
-"medic" = [845.0,1130.0]
-"potty" = [845.0,953.0]
+"info" = [845.0, 1040.0]
+"medic" = [845.0, 1130.0]
+"potty" = [845.0, 953.0]
 "potty2" = [200.0, 200.0]
 
 [[days]]
-"date"	= "2024-06-01"
+"date" = "2024-06-01"
 "startTime" = "12:00"
 "endTime" = "20:00"
 "slotDuration" = 30
 "location" = "Columbia City"
-"mapUrl"= "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
-"stages"= [ "columbia_hill", 	"edmunds",	"gateway" ]
+"mapUrl" = "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
+"stages" = ["columbia_hill", "edmunds", "gateway"]
 [days.schedule]
-"12:00" = [ "future", 			"", 						"" ]
-"12:30" = [ "seismic", 			"better", 			"brasscheeks" ]
-"13:00" = [ "neighbors", 		"8bit", 				"artesian" ]
-"13:30" = [ "youngfellaz", 	"agab", 				"tacomarama" ]
-"14:00" = [ "baque", 				"flyby", 				"tmb" ]
-"14:30" = [ "vamola", 			"brassless", 		"goodtrouble" ]
-"15:00" = [ "filthy", 			"sticks", 			"goodtrouble" ]
-"15:30" = [ "machine", 			"cimarrona", 		"baque" ]
-"16:00" = [ "brasscheeks", 	"vamola", 			"chaotic" ]
-"16:30" = [ "tacomarama", 	"artesian", 		"neon" ]
-"17:00" = [ "brassless", 		"phinney", 			"8bit" ]
-"17:30" = [ "flyby", 				"phinney", 			"filthy" ]
-"18:00" = [ "tmb", 					"machine", 			"sticks" ]
-"18:30" = [ "neon", 				"goodtrouble", 	"youngfellaz" ]
-"19:00" = [ "chaotic", 			"neighbors", 		"cimarrona" ]
-"19:30" = [ "allstars", 		"", 						"" ]
+"12:00" = ["future", "", ""]
+"12:30" = ["seismic", "better", "brasscheeks"]
+"13:00" = ["neighbors", "8bit", "artesian"]
+"13:30" = ["youngfellaz", "agab", "tacomarama"]
+"14:00" = ["baque", "flyby", "tmb"]
+"14:30" = ["vamola", "brassless", "goodtrouble"]
+"15:00" = ["filthy", "sticks", "goodtrouble"]
+"15:30" = ["machine", "cimarrona", "baque"]
+"16:00" = ["brasscheeks", "vamola", "chaotic"]
+"16:30" = ["tacomarama", "artesian", "neon"]
+"17:00" = ["brassless", "phinney", "8bit"]
+"17:30" = ["flyby", "phinney", "filthy"]
+"18:00" = ["tmb", "machine", "sticks"]
+"18:30" = ["neon", "goodtrouble", "youngfellaz"]
+"19:00" = ["chaotic", "neighbors", "cimarrona"]
+"19:30" = ["allstars", "", ""]
 [days.coordinates]
-"info" = [480.0,1270.0]
-"medic" = [480.0,1180.0]
-"potty" = [410.0,1330.0]
+"info" = [480.0, 1270.0]
+"medic" = [480.0, 1180.0]
+"potty" = [410.0, 1330.0]
 
 
 [[days]]
-"date"	= "2024-06-02"
+"date" = "2024-06-02"
 "startTime" = "12:00"
 "endTime" = "18:00"
 "slotDuration" = 30
 "location" = "Pratt Park"
 "mapUrl" = "https://maps.app.goo.gl/nX3NEqR9PTTX1KnC6"
-"stages"= [ "pratt_hill", 		"pratt_field" ]
+"stages" = ["pratt_hill", "pratt_field"]
 [days.schedule]
-"12:00" = [ "phinney", "gozona" ]
-"12:30" = [ "neighbors", "sticks" ]
-"13:00" = [ "8bit", "artesian" ]
-"13:30" = [ "cimarrona", "goat" ]
-"14:00" = [ "baque", "youngfellaz" ]
-"14:30" = [ "agab", "brassless" ]
-"15:00" = [ "tacomarama", "filthy" ]
-"15:30" = [ "neon", "flyby" ]
-"16:00" = [ "youngfellaz", "tmb" ]
-"16:30" = [ "lynx", "chaotic" ]
-"17:00" = [ "goodtrouble", "cimarrona" ]
-"17:30" = [ "allstars", "" ]
+"12:00" = ["", "gozona"]
+"12:30" = ["neighbors", "sticks"]
+"13:00" = ["8bit", "artesian"]
+"13:30" = ["cimarrona", "goat"]
+"14:00" = ["baque", "youngfellaz"]
+"14:30" = ["agab", "brassless"]
+"15:00" = ["tacomarama", "filthy"]
+"15:30" = ["neon", "flyby"]
+"16:00" = ["youngfellaz", "tmb"]
+"16:30" = ["lynx", "chaotic"]
+"17:00" = ["goodtrouble", "cimarrona"]
+"17:30" = ["allstars", ""]
 [days.coordinates]
-"info" = [1200.0,420.0]
-"medic" = [1200.0,510.0]
+"info" = [1200.0, 420.0]
+"medic" = [1200.0, 510.0]
 "potty" = [1200.0, 740.0]
