--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2024.0.0",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
