--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -19,8 +19,8 @@ description = "West African Drumming & Dance"
 [agab]
 name = "AGAB"
 location = "Seattle, WA"
-url = "#"
-description = ""
+url = "https://www.facebook.com/profile.php?id=100093494289106"
+description = "All Goods Are Bads"
 
 [analog]
 name = "Analog Brass"
@@ -49,13 +49,13 @@ description = ""
 [baque]
 name = "Baque Maré"
 location = "Seattle, WA"
-url = "https://www.facebook.com/baquemareseattle/"
-description = "Página oficial do grupo de maracatu baque virado de Seattle. Official account of Seattle's own mara"
+url = "https://www.instagram.com/baquemare/"
+description = "Seattle-based Maracatu de Baque Virado drumming group. We bring Northeastern Afro-Brazilian drumming traditions: Brazil beyond samba!"
 
 [better]
 name = "Better as Brass"
 location = "Seattle, WA"
-url = "https://www.youtube.com/watch?v=LwcRs60F_bE"
+url = "https://betterasbrass.band"
 description = "Imagine a great mixtape from a school dance (slow dances included plus possibly a little singing and/or karaoke!) but brass and that’s the plan: En Vogue, Boyz II Men, The Police, Radiohead, Soundgarden, Kansas, Lonely Island, Britney Spears, and more!"
 
 [bigblitz]
@@ -73,7 +73,7 @@ description = "Black Sheep Brass Band is based out of Sonoma County, in the Nort
 [bluethunder]
 name = "Blue Thunder"
 location = "Seattle, WA"
-url = "https://www.seahawks.com/drumline/blue-thunder"
+url = "https://www.seahawks.com/drumline/blue-thunder/"
 description = "Seahawks Blue Thunder is the heartbeat of the fans. This high-energy entertainment drumline was established in 2004 at Lumen Field, performing throughout the stadium before, during and after games."
 
 [brasscadia]
@@ -91,13 +91,14 @@ description = "A street band made up of people from all around Santa Barbara Cou
 [brasscheeks]
 name = "Brass Cheeks"
 location = "Seattle, WA"
-description = "Feel the breeze."
+url = "https://www.facebook.com/profile.php?id=61554147362162"
+description = "Brass Cheeks is a 9-piece brass band featuring UW Alumni specializing in funk, soul, pop, and sometimes metal when we're feeling intense."
 
 [brassless]
 name = "Brassless Chaps"
 location = "Portland, OR"
 url = "https://www.facebook.com/brasslesschapspdx/"
-description = "An all queer, anti-fascist, inclusive brass band based out of Portland, Oregon"
+description = "We are a Queer community band playing out and proud in the streets of Portland, Oregon on the unceded lands of the Cowlitz, and Confederated Tribes of the Grand Ronde people. Through our performances, we wish to promote Queer joy while highlighting Queer artists and themes, as well as playing traditional brass band standards and antifascist songs. We use our talents to support Queer communities and other causes that reflect our values. We use the joy of music as an act of resistance to achieve queer liberation through music. "
 
 [brothers]
 name = "Brothers of Brass"
@@ -136,7 +137,7 @@ url = "https://chunkyhustlebrassband.com/"
 description = "A brassalicious, bouncy castle of spirited song and sound"
 
 [cimarrona]
-name = "Cimarrona"
+name = "Cimarrona La Original Domingueña"
 location = "Santo Domingo, Costa Rica"
 url = "https://www.facebook.com/cimarronalaoriginal/"
 description = "The Original Domingueña"
@@ -157,7 +158,7 @@ description = "We’re a community of talented musicians, united by our shared l
 name = "Fly By"
 location = "Boston, MA"
 url = "https://flybybrassband.com/"
-description = "We are a ~12 piece brass-band out of the greater Boston Area who enjoys playing interesting and approachable music. Born of the local HONK scene we focus on bringing live horn harmonies to the people."
+description = "We are a 15 piece brass-band out of the greater Boston Area who enjoys playing interesting and approachable music. Born of the local HONK scene we focus on bringing live horn harmonies to the people."
 
 [funkrust]
 name = "Funkrust Brass Band"
@@ -181,13 +182,13 @@ description = ""
 name = "G.O.A.T. Band"
 location = "Seattle, WA"
 url = ""
-description = ""
+description = "Our band consists of students who have played 2-4 years on a wide range of instruments. Everyone is in 7th or 8th grade and dedicated to playing their instruments and bringing joy to our audiences. "
 
 [goodtrouble]
-name = "Good Trouble"
-location = ""
-url = "#"
-description = ""
+name = "Good Trouble Brass Band"
+location = "Somerville, MA"
+url = "https://www.goodtroublebrassband.org/"
+description = "Good Trouble Brass Band is a not-for-profit, and politically active New Orleans-style street band based in Somerville and Cambridge, Massachusetts. Our mission is to fight for social justice causes and support community events while having fun and spreading joy through our music."
 
 [allstars]
 name = "HONK! All-Stars (open jam)"
@@ -229,7 +230,7 @@ description = ""
 name = "La Banda Gozona"
 location = "Seattle, WA"
 url = "https://www.facebook.com/people/La-Banda-Gozona/100065180273378/"
-description = "gozona (go·soh·nah), [noun]: In the Sierra Madre of Oaxaca, a gozona is a four-day combination serenade and battle of the bands. We are La Banda Gozona, a group of Seattle musicians who play the traditional music of Oaxaca, Mexico."
+description = "We play traditional fiesta music of Oaxaca, emphasizing the sierra zapoteca, but covering Oaxaca's `siete regiones` in styles such as sones y jarabes, son istmeño, chilenas, zapateados, pasillos, cumbias and danzones."
 
 [lovett]
 name = "Lovett Arts"
@@ -240,8 +241,8 @@ description = "Puppet Performance. Beautifully crafted giant puppets are lightwe
 [neighbors]
 name = "LOUD Neighbors"
 location = "Arcata, CA"
-url = "https://www.facebook.com/loud.neighbors.brass/"
-description = "When a Loud Neighbor extends a tiny hand, don't be afraid to shake it!"
+url = "https://www.instagram.com/loud.neighbors.brass/"
+description = "LOUD Neighbors Brass Band is a Humboldt County, CA based group that loves building community and bringing joy to any willing participant! "
 
 [lbcs]
 name = "Louisa Boren & Cleveland STEM Middle School Band"
@@ -252,8 +253,8 @@ description = ""
 [lynx]
 name = "Lynxcorps"
 location = "Seattle, WA"
-url = ""
-description = "Seattle youth band"
+url = "https://www.instagram.com/lincoln.honk.band/"
+description = "Lynxcorps is Lincoln Highschool's student led honk band. We strive to develop our music skills, foster community, and play music. "
 
 [meownow]
 name = "MeowNow Brass Band"
@@ -294,20 +295,20 @@ description = "Queens of HONK! is meant as an active and open invitation to ALL 
 [phinney]
 name = "Phinney Ridge Steel Band"
 location = "Seattle, WA"
-url = "https://steeldrums.podia.com/"
-description = "Groovin' in the Pacific Northwest"
+url = "https://www.instagram.com/phinneyridgesteelband/"
+description = "The steelpan is one of the world's youngest acoustic instruments, and the Phinney Ridge Steel Band is one of Seattle's most recent ensembles, having only formed in the summer of 2023. We are dedicated to sharing good music with the world and serving the community with steelpan!"
 
 [redalert]
 name = "Red Alert"
 location = "Seattle, WA"
 url = "https://www.nhl.com/kraken/fans/game-presentation"
-description = "Introducing Red Alert, the Kraken Marching band, led by Liz Harris Scruggs. Look out for this 32-member band at the Armory and on the plaza pre-game and in the arena during the game as they help us rock the rink."
+description = "We are the official band for the Seattle Kraken!  We play at all home Kraken games and for events around our community.  We are wrapping up our second season and are committed to excellence, inclusion, and joy!"
 
 [reigncity]
 name = "Reign City Riot"
 location = "Seattle, WA"
-url = "http://www.rainbowcityband.com/riot/"
-description = "Reign City Riot is a brass band and drumline that supplies high-energy entertainment before, during, and after home matches of OL Reign, our powerhouse professional NWSL soccer team."
+url = "https://linktr.ee/ReignCityRiot"
+description = "The official pep band for OL Reign. Part of Rainbow City Performing Arts, Seattle’s LGBTQIA+ performance organization."
 
 [riseup]
 name = "Rise Up! Action Band"
@@ -328,7 +329,7 @@ url = "https://goseattleu.com/sports/2020/1/15/drumline.aspx"
 description = "The Seattle U Drumline began in 2012, and has grown a lot in the short time since its inception. Drumline plays at all basketball games, as well as some soccer and volleyball games."
 
 [seismic]
-name = "Seismic Sound"
+name = "Seismic Sound Drumline"
 location = "Seattle, WA"
 url = "https://www.facebook.com/SeismicSoundDrumline/"
 description = "We are a non-profit percussion ensemble that aims to provide financially accessible and high-quality education for high school and college age students. "
@@ -342,14 +343,14 @@ description = ""
 [jambalaya]
 name = "Soul Jambalaya"
 location = "Seattle, WA"
-url = ""
-description = ""
+url = "https://www.facebook.com/profile.php?id=100093494289106"
+description = "Performing a musical mélange of jazz, blues, funk, reggae, and gospel, Soul Jambalaya celebrates the love, joy, and resiliency of black and black-influenced song."
 
 [machine]
 name = "SOUND MACHINE"
 location = "Whidbey Island, WA"
 url = "#"
-description = "Are you ready to get FAMILY FUNKY?"
+description = "SOUND MACHINE is Whidbey Island's own HONK! Band. Open and accessible to players of all ages and abilities, we pride ourselves on playing for our local community and brining joyous noise to our friends and neighbors."
 
 [soundwave]
 name = "Sound Wave"
@@ -361,18 +362,18 @@ description = "Sound Wave is the official band of Seattle Sounders FC. In 2009, 
 name = "South End Pep"
 location = "Seattle, WA"
 url = "#"
-description = "Pep band from the south end. Yo."
+description = "The South End Pep Band is a collection of students from three Seattle Public Schools, Franklin High School, Cleveland High School, and Rainier Beach High School.  All three schools have lower numbers of students in band so we join together for certain events to give the students a more exciting high school band experience."
 
 [sticks]
 name = "Sticks & Bones"
 location = "Olympia, WA"
 url = "https://www.facebook.com/olysnewcommuityactivistband/"
-description = "women/queer led street band welcoming all levels of musicians in creating a more just + joyful world!"
+description = "We are a justice and joy oriented multigenerational all-skill level activist band led by queer folks and women!"
 
 [tacomarama]
 name = "Tacomarama"
 location = "Tacoma, WA"
-url = "https://www.facebook.com/Tacomarama"
+url = "http://instagram.com/tacomarama"
 description = "Tacoma’s community street band. Always recruiting. Beginners welcome."
 
 [m9]
@@ -384,8 +385,8 @@ description = ""
 [tmb]
 name = "TMB"
 location = "Seattle, WA"
-url = "https://tmbbrass.bandcamp.com/"
-description = "Wherever they go, Seattle-based TMB Brass creates a New Orleans-style dance party!"
+url = "https://linktr.ee/tmbbrass"
+description = "TMB’s style of music is a mixture of New Orleans brass, Jazz, Pop, Funk, and Disco. We want our music to be fun and joyful. We love it when our audience becomes a dance party and a sing-along of raucous merriment!"
 
 [unexpected]
 name = "the UNEXPECTED BRASS BAND"
@@ -397,7 +398,7 @@ description = "How can we describe the mystery? Why would we describe the myster
 name = "VamoLá"
 location = "Seattle, WA"
 url = "https://vamola.org/"
-description = "Through vibrant processions, parades, and stage performances, VamoLá brings to life the celebratory spirit of Brazilian Carnaval."
+description = "VamoLá is Seattle's Brazilian blast, bringing fiery percussion rhythms and sun-drenched energy straight to the streets. Prepare for infectious grooves, dazzling costumes, and enough samba spirit to turn every possible puddle into a mini Copacabana beach. Get ready to shake, shimmy, and celebrate your way across Brazil, right here in the heart of the Northwest!"
 
 [window]
 name = "Window Smashing Job Creators"
