update reign band description

--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -308,7 +308,7 @@ description = "We are the official band for the Seattle Kraken!  We play at all 
 name = "Reign City Riot"
 location = "Seattle, WA"
 url = "https://linktr.ee/ReignCityRiot"
-description = "The official pep band for OL Reign. Part of Rainbow City Performing Arts, Seattle’s LGBTQIA+ performance organization."
+description = "The official pep band for Reign FC. Part of Rainbow City Performing Arts, Seattle’s LGBTQIA+ performance organization."
 
 [riseup]
 name = "Rise Up! Action Band"
