--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -46,9 +46,9 @@
 "16:30" = ["tacomarama", "artesian", "neon"]
 "17:00" = ["brassless", "phinney", "8bit"]
 "17:30" = ["flyby", "phinney", "filthy"]
-"18:00" = ["tmb", "machine", "sticks"]
+"18:00" = ["tmb", "neighbors", "sticks"]
 "18:30" = ["neon", "goodtrouble", "youngfellaz"]
-"19:00" = ["chaotic", "neighbors", "cimarrona"]
+"19:00" = ["chaotic", "", "cimarrona"]
 "19:30" = ["allstars", "", ""]
 [days.coordinates]
 "info" = [480.0, 1270.0]
